--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,14 @@
     <string name="firebase_login">Firebase Login</string>
     <string name="login_with_google">Login with Google</string>
     <string name="pls_turn_on_gps">Proszę włączyć GPS</string>
+    <string name="lost_gps">Brak zasięgu GPS</string>
+    <string name="pls_turn_on_network_connection">Proszę włączyć połączenie internetowe</string>
     <string name="click_to_return">Kliknij, aby powrócić</string>
     <string name="need_permission">Potrzeba odpowiednich uprawień do poprawnego działania aplikacji</string>
     <string name="thx_for_persmission">Dziękuję za przyzanie uprawnień, możesz korzystać z aplikacji</string>
     <string name="service_channel">Service Channel</string>
     <string name="information">Information</string>
-    <string name="ok">OK</string>
+    <string name="positive_button">OK</string>
     <string name="close">Close</string>
     <string name="choose_action">Choose Action</string>
     <string name="hide">Hide</string>
@@ -23,6 +25,7 @@
     <string name="firebase_upload">Firebase User Object Upload Start</string>
     <string name="firebase_download">Firebase User Object Download Start</string>
     <string name="refresh_fragment">Refresh Fragment</string>
+    <string name="send_report">Send Report</string>
     <!--    <string name=""> </string>-->
 
     <!--    getString(R.string)-->
