composition v1 test, new style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="choose_action">Choose Action</string>
     <string name="hide">Hide</string>
     <string name="distance">500m</string>
+    <string name="your_profile">Your profile</string>
     <string name="raiting">Raiting: </string>
     <string name="like">Likes: </string>
     <string name="dislike">Dislikes: </string>
