--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,15 @@
     <string name="firebase_upload">Firebase User Object Upload Start</string>
     <string name="firebase_download">Firebase User Object Download Start</string>
     <string name="refresh_fragment">Refresh Fragment</string>
-    <string name="send_report">Send Report</string>
     <string name="thx_for_review">Send Review</string>
-    <string name="time_report">Time report:</string>
+    <string name="time_report">Minutes Ago: </string>
+    <string name="send_report">Send Report </string>
+    <string name="tts_carAccident"> Car accident </string>
+    <string name="tts_roadsideInspection"> Roadside Inspection </string>
+    <string name="tts_speedCamera"> Speed Camera </string>
+    <string name="tts_roadworks"> Roadworks </string>
+    <string name="tts_meters"> meters</string>
+    <string name="thx_for_feedback">Thanks you for the feedback</string>
     <!--    <string name=""> </string>-->
 
     <!--    getString(R.string)-->
