--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="app_need_permission">App need permission</string>
     <string name="thx_for_persmission">Thanks for permission</string>
     <string name="service_channel">Service Channel</string>
-    <string name="information">Information</string>
+    <string name="information">Simple Driver Assistant - author Paweł Durda</string>
     <string name="positive_button" translatable="false">OK</string>
     <string name="close">Close</string>
     <string name="choose_action">Choose Action</string>
@@ -20,7 +20,7 @@
     <string name="delete_report">Delete</string>
     <string name="distance">500m</string>
     <string name="your_profile">Your profile</string>
-    <string name="raiting">Raiting: </string>
+    <string name="rating">Rating: </string>
     <string name="like">Likes: </string>
     <string name="dislike">Dislikes: </string>
     <string name="latitude">Latitude: </string>
